--- a/projeto-final/assets/css/style.css
+++ b/projeto-final/assets/css/style.css
@@ -230,13 +230,13 @@ h2{
     transition: 0.3s;
 }
 .github .card{
-    background-image: url('./git.webp');
+    background-image: url('../images/git.webp');
 }
 .linkedin .card{
-    background-image: url('./linkedin.webp');
+    background-image: url('../images/linkedin.webp');
 }
 .website .card{
-    background-image: url('./website.jpeg');
+    background-image: url('../images/website.jpeg');
 }
 .card-text{
     width: 40%;
